transition to DTO